--- a/gb/news392_4.md
+++ b/gb/news392_4.md
@@ -1,5 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/fcjmkl2375/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fcjmkl2375/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/4/n11767385.md#1" target="_blank">【名家专栏】主流媒体的新年决心：停止撒谎</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/4/n11767385.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Front-pages-1189631926-1200x782-150x120.jpg" align ="left"></a>自从唐纳德?川普（特朗普）宣布竞选美国总统以来，主流媒体——显然应该是为了保护我们和自己不受可怕的唐纳德的伤害（尽管川普的参选和总统任期内为他们中的许多人带来了前所未有的好处）——就一直放任自己对几乎所有关于川普总统的报道都进行歪曲、捏造、撒谎和夸大其词。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:53 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/4/n11767063.md#1" target="_blank">袁斌：2019年以悲剧落幕，2020年以惨剧揭幕</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/4/n11767063.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/33-600x400-1-150x120.jpeg" align ="left"></a>2020年1月1日18时许，江苏省仪征市刘集镇刘集村村民彭在林为报复当地政府强拆而行凶砍人，导致一死二伤。网络舆论把这一事件形容为今年的“开年第一杀”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 1:45 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766583.md#1" target="_blank">为何中国滑雪队的要求遭挪威图书馆强烈拒绝</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766583.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2011/01/1101060640572357-150x120.jpg" align ="left"></a>中国人在西方自由民主的国家，竟然提出剥夺人们言论自由的要求，这是何等的荒谬和不可思议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 8:56 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766427.md#1" target="_blank">张林：共军在朝鲜战争中丧生两百万（2）</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766427.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Korean_War_Montage_2-600x350-600x350-1-150x120.png" align ="left"></a>章国隆说，更多共军生病发烧，死于途中。每次一个连队近百人从丹东出发，一个来回步行一个月左右，一般都有四分之一的减员，就是死于非命。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:39 AM			</td></tr>
@@ -19,45 +18,8 @@
 随后，川普在佛州海湖庄园参加新年庆祝活动前，就国际国内一些问题回答了记者的提问。在美中贸易问.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 4:22 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11761363.md#1" target="_blank">【名家专栏】中共式审查制度正向世界扩散</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11761363.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/88182999-1200x698-150x120.jpg" align ="left"></a>中国共产党痛恨信息的自由传播和思想的自由表达。中共的领导人知道，他们的继续存在依赖于他们扼杀个人意志、政治表达和人权的能力——而所有这些思想和权利都是香港人正在竭力争取的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 7:58 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11761870.md#1" target="_blank">程晓容：百万港人元旦游行 2020抗共主题延续</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11761870.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2001010413102188-1-150x120.jpg" align ="left"></a>维多利亚公园和街头人山人海，口号声不绝于耳。反送中运动历时半年多，元旦大游行再次冲击中共政权，开启了2020抗共潮的序幕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 6:17 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/4/n11767465.md#1" target="_blank">陈达：天灭中共之罗网谁能挡住？</a><br></h3>状若欠债表改的政绩名目，
-访民队伍八方扩却停不住。
-形如丐帮梦更新画饼哄铺，
-反共春潮四海涌却瞒不住。
-看像自恋癖自搭口碑积木，
-维稳项目一连串却盖不住。
-听似久失眠无奈装打呼噜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:35 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/4/n11767452.md#1" target="_blank">李春草：天灭中共此其时</a><br></h3>奸党逆天霸家园
-假扮公仆贪无厌
-践踏人权标主权
-出卖后土何其癫
-祸加港人狼不仁
-虐流世界孔作掩
-魔兽焉谈价值观
-幽灵才喜淫秽乱
-否德不耻猴沐冠
-腥闻薰天奴自干
-先锋活摘肾与肝
-党贵作梦安知惭......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:26 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/4/n11767432.md#1" target="_blank">振玉：寄语台湾</a><br></h3>南歌子.寄愿
-宝岛清清水，
-蓬湖湛湛湾。
-海蓝沙净自由天，
-留得一汪澄澈在人间。
-
-落日云霞美，
-晨风草木鲜。
-勿亲中共染腥膻，
-好待少年圆梦玉山边。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:20 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/4/n11767394.md#1" target="_blank">理悟：小康在何方</a><br></h3>党领脱贫在路上，
-不落一人奔小康。
-二零二零决胜年，
-不知小康在何方？
-信访局前瞅一瞅，
-冤气冲天惊上苍。
-山西老兵因何故？
-吊死信访大门上。
-带花上吊谁听说？
-必有苦水满肚肠。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:09 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11762141.md#1" target="_blank">袁斌：中共恐惧的“规模性失业潮”正扑面而来</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11762141.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/dfed3f93b4d5b2bfcee7e588808f345c-150x120.jpg" align ="left"></a>2019年12月10日至12日，被官媒称为“定调2020年经济工作”的中共经济工作会议在北京举行。如同去年底的中共经济工作会议一样，这次会议继续强调“六稳”，即稳就业、稳金融、稳外贸、稳外资、稳投资、稳预期。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 2:41 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11761548.md#1" target="_blank">可心：中共侵蚀联合国人权事务的四大手段</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11761548.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/UN_Members_Flags2-600x400-150x120.jpg" align ="left"></a>不久前，联合国雇员EmmaReilly向媒体爆料称瑞士联合国人权办公室继续向中共提供批评其政权的人权活动人士名单和信息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 12:54 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11764911.md#1" target="_blank">【名家专栏】浅析十年来美国主要经济论点</a><br></h3>本月初，华盛顿智库布鲁金斯学院（Brookings Institution）询问了10位学者，“过去十年，经济学界的重大理论是什么？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 12:15 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/4/n11766848.md#1" target="_blank">唐风：温哥华中学生课堂讲香港被踢下体之思考</a><br></h3>日前，在加拿大温哥华地区的列治文市中学因课堂讲香港游行真相，后即遭群殴踢下体事件，引起华人社区的广泛关注。事情发生在12月2日，可是很多本地人并不知晓或只知道一些从某个媒体看到的被轻描淡写了事件。所以没有引起更多的讨论和后期跟进关注。直到一些华裔移民到市政府、教育局上访，并递交了呼吁罢免校长的联署书后，此事即在加拿大的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 9:50 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766398.md#1" target="_blank">杨宁：公安内部现惨案 官员自相残杀难休止</a><br></h3>生活在如此政治氛围下的中共各级官员，内心应该都充满了恐惧，因为不知道自己哪一天也会成为枪下之鬼。这也是越来越多的官员从体制内辞职，或者外逃、转移资金并将亲属安排在国外的原因，也是诸多中共高层在海外寻找退路的缘由。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 5:37 AM			</td></tr>
@@ -92,5 +54,17 @@
 脱贫可实现
 朋友笑我痴
 脑子被水淹......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 7:10 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11762112.md#1" target="_blank">雪绮：见群鸡退鹰  反观中共末日</a><br></h3>美国伊利诺州一座农场的鸡舍，被妄欲享受饱食鸡肉大餐的老鹰闯入，却未料竟反遭鸡群围剿、无路可逃，终狼狈离场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 2:13 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11761788.md#1" target="_blank">金浴凤：元旦寄语迷中帝</a><br></h3>打虎威振山河动，贪权足陷蟾迷宫；
+思圄破残马列里，道惑倿嬖左右中；
+一路撒金不嫌远，阻川徘徊应旋踵；
+台港自由是典范，苏联专制成警钟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 2:00 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11761994.md#1" target="_blank">伍新：贺中华民国《反渗透法》通过</a><br></h3>二零一九年末，反渗透法通过。
+似乎势不可遏，又像拖无可拖。
+此法那么难产，原因值得捉摸。
+担心影响交流，渗透实被淡漠。
+忧患本党得失，党争压倒一切。
+无论什么颜色，红都渗透脑壳。
+渗透渗透什么？最毒正是这个。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 1:06 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/fcjmkl2375/djy/blob/master/gb/news392_4.md#1<br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fcjmkl2375/djy/blob/master/gb/news392_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_4.htm">http://www.epochtimes.com/gb/news392_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
